tests/paczka1/fuzzy1/68532790.err
Error in line 10: n0e A516 26,9
Error in line 12: A516 A253 9,6
Error in line 27: ddW S429 66,5
Error in line 19: ZN4WPNQ6 A784 76,2
Error in line 37: ZN4WPNQ6 A253 61,6
